--- a/doctors_appointment/pubspec.yaml
+++ b/doctors_appointment/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   provider: ^6.1.1
   json_theme: ^6.4.0
   awesome_notifications: ^0.8.2
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
@@ -73,6 +74,13 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: 'assets/images/logo.png'
+  adaptive_icon_foreground: 'assets/images/adaptive_fg.png'
+  adaptive_icon_background: '#ffffff'
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
